fix: common/ Java-17 compat; move TailcarftServerEntry to version layer